--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
   <head>
     <title>Gordian Plug-in</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
-    <!--<script src="https://sdk.gordiansoftware.com/javascript/v2.2/gordian.min.js"></script>-->
-    <script src="https://gordian-javascript.herokuapp.com/javascript/v2.2/gordian.min.js"></script>
+    <script src="https://d28754a188d0.ngrok.io/build/javascript/v2.2/gordian.min.js"></script>
   </head>
 
   <body>
