--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
   <head>
     <title>Gordian Plug-in</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
-    <script src="https://d28754a188d0.ngrok.io/build/javascript/v2.2/gordian.min.js"></script>
+    <meta name=“viewport” content=“width=device-width, initial-scale=1.0,
+    user-scalable=0">
+    <script src="https://a78123814727.ngrok.io/build/javascript/v2.2/gordian.min.js"></script>
   </head>
 
   <body>
