Styling & Gordian Javascript Herkou

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <title>Gordian Plug-in</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="stylesheets/style.css" />
     <!--<script src="https://sdk.gordiansoftware.com/javascript/v2.2/gordian.min.js"></script>-->
-    <script src="https://8d7d56f802f3.ngrok.io/build/javascript/v2.2/gordian.min.js"></script>
+    <script src="https://gordian-javascript.herokuapp.com/javascript/v2.2/gordian.min.js"></script>
     <title>Document</title>
   </head>
   <body>
