--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Gordian Plug-in</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+      type="text/css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="stylesheets/style.css" />
-    <!--<script src="https://sdk.gordiansoftware.com/javascript/v2.2/gordian.min.js"></script>-->
-    <script src="https://gordian-javascript.herokuapp.com/javascript/v2.2/gordian.min.js"></script>
+    <script src="https://sdk.gordiansoftware.com/javascript/v2.2/gordian.min.js"></script>
     <title>Document</title>
   </head>
   <body>
