--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Gordian Plug-in</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="stylesheets/style.css" />
-    <script src="https://sdk.gordiansoftware.com/javascript/v2.2/gordian.min.js"></script>
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Gordian Plug-in</h1>
-    <h2>Customer basket</h2>
-    <div id="upsell-container" />
-    <div id="basket">
-      <table>
-        <thead>
-          <th>Product</th>
-          <th>Price</th>
-        </thead>
-        <tbody id="basket-body"></tbody>
-      </table>
-    </div>
-    <button id="fulfill" class="btn">Book</button>
-    <script src="/javascripts/index.js" type="text/javascript"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Gordian Plug-in</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="stylesheets/style.css" />
+  <script src="https://sdk.gordiansoftware.com/javascript/v2.2/gordian.min.js"></script>
+  <title>Document</title>
+</head>
+
+<body>
+  <h1>Gordian Plug-in</h1>
+  <h2>Customer basket</h2>
+  <div id="upsell-container"></div>
+  <div id="basket">
+    <h3>Basket</h3>
+    <table>
+      <thead>
+        <th>Product</th>
+        <th>Price</th>
+      </thead>
+      <tbody id="basket-body"></tbody>
+    </table>
+  </div>
+  <button id="fulfill" class="btn">Book</button>
+  Click "Book" to add your selected items to the basket.
+  <div id="fulfillment">
+    <h3>Fulfillment</h3>
+    <table>
+      <thead>
+        <th>Product</th>
+        <th>Price</th>
+        <th>Status</th>
+      </thead>
+      <tbody id="fulfillment-body"></tbody>
+    </table>
+  </div>
+  <button id="get-trip" class="btn">Get Trip</button>
+  Click "Get Trip" to poll for the status of your fulfillment. This may take a minute or two.
+  <script src="/javascripts/index.js" type="text/javascript"></script>
+</body>
+
 </html>
