--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       <tbody id="basket-body"></tbody>
     </table>
   </div>
-  <button id="fulfill" class="btn">Book</button>
+  <button id="fulfill" class="button-index">Book</button>
   Click "Book" to add your selected items to the basket.
   <div id="fulfillment">
     <h3>Fulfillment</h3>
@@ -39,7 +39,7 @@
       <tbody id="fulfillment-body"></tbody>
     </table>
   </div>
-  <button id="get-trip" class="btn">Get Trip</button>
+  <button id="get-trip" class="button-index">Get Trip</button>
   Click "Get Trip" to poll for the status of your fulfillment. This may take a minute or two.
   <script src="/javascripts/index.js" type="text/javascript"></script>
 </body>
