--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,8 @@
     </table>
   </div>
   <button id="get-trip" class="button-index">Get Trip</button>
-  Click "Get Trip" to poll for the status of your fulfillment. This may take a minute or two.
+  Click "Get Trip" to poll for the status of your fulfillment. This may take a
+  minute or two.
   <script src="/javascripts/index.js" type="text/javascript"></script>
 </body>
 
